--- a/config.toml
+++ b/config.toml
@@ -83,7 +83,7 @@ copyright = "Copyright &copy; 2019 [GetHugoThemes](https://gethugothemes.com) Al
 
   # Navigation get start button
   [params.navButton]
-  enable = true
+  enable = false
 
   
 ############################# Footer ########################
