--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -196,19 +196,19 @@ otherBooks:
   subtitle : "Poznajmy się! Mam dla Ciebie kilka opowieści o JVM, systemach operacyjnych i wydajności..."
   book:
     # books loop
-    - image : "http://i3.ytimg.com/vi/g6yUSonoM44/hqdefault.jpg"
+    - image : "https://i3.ytimg.com/vi/g6yUSonoM44/hqdefault.jpg"
       link : "https://www.youtube.com/watch?v=g6yUSonoM44"
       
     # books loop
-    - image : "http://i3.ytimg.com/vi/bJAg_23ixmY/hqdefault.jpg"
+    - image : "https://i3.ytimg.com/vi/bJAg_23ixmY/hqdefault.jpg"
       link : "https://www.youtube.com/watch?v=bJAg_23ixmY"
       
     # books loop
-    - image : "http://i3.ytimg.com/vi/-ccFyYRYvBg/hqdefault.jpg"
+    - image : "https://i3.ytimg.com/vi/-ccFyYRYvBg/hqdefault.jpg"
       link : "https://www.youtube.com/watch?v=-ccFyYRYvBg"
       
     # books loop
-    - image : "http://i3.ytimg.com/vi/Ag9mBOjSeb8/hqdefault.jpg"
+    - image : "https://i3.ytimg.com/vi/Ag9mBOjSeb8/hqdefault.jpg"
       link : "https://www.youtube.com/watch?v=Ag9mBOjSeb8"
 
 ################################ Blog ###################################
@@ -240,4 +240,4 @@ contact:
     - title : "Konferencje i szkolenia"
       icon : "ti-location-pin" # themify icon pack : https://themify.me/themify-icons
       list:
-        - listItem : "[Segfault](http://segfault.events)"
+        - listItem : "[Segfault](https://segfault.events)"
