--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,11 @@
 ######################## default configuration ####################
 baseURL = "https://javaconcurrency.symentis.pl/"
 languageCode = "en-us"
-title = "Współbieżność w Java"
+title = "Współbieżność w Javie"
 theme = "influencer"
 summaryLength = "10"
 paginate = 6
+enableRobotsTXT = true
 
 ############################# Plugins ##############################
 [params.plugins]
@@ -43,20 +44,20 @@ paginate = 6
   URL = "chapter"
   weight = 2
   
-  [[menu.main]]
-  name = "Opinie"
-  URL = "review"
-  weight = 3
+  # [[menu.main]]
+  # name = "Opinie"
+  # URL = "review"
+  # weight = 3
   
   [[menu.main]]
   name = "Trener"
   URL = "author"
   weight = 4
   
-  [[menu.main]]
-  name = "Blog"
-  URL = "blog"
-  weight = 5
+  # [[menu.main]]
+  # name = "Blog"
+  # URL = "blog"
+  # weight = 5
   
   [[menu.main]]
   name = "Kontakt"
