--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -2,7 +2,7 @@
 banner:
   enable : true
   writter : "Jarosław Pałka"
-  title : "Współbieżność w Java z wykorzystaniem \"concurrency primitives\""
+  title : "Współbieżność w Javie z wykorzystaniem \"concurrency primitives\""
   image : "images/about/training.png"
   content : "Jesteś programistą  - super! Wątki i współbieżność budzą w Tobie  strach? Mam dla Ciebie szkolenie, które na zawsze pozwoli Ci się pozbyć takich obaw i lęków. Podczas tego szkolenia poznasz bliżej “concurrency primitives” dostępne w Java SDK, czyli pakiet _java.util.concurrent_. Nauczysz się jak z podstawowych elementów, takich jak: kolejki, blokady, czy bariery budować czytelne rozwiązania, jak analizować ich wydajność i jak je testować"
   price : "14.99"
@@ -198,18 +198,22 @@ otherBooks:
     # books loop
     - image : "https://i3.ytimg.com/vi/g6yUSonoM44/hqdefault.jpg"
       link : "https://www.youtube.com/watch?v=g6yUSonoM44"
+      title: "JIT me baby one more time"
       
     # books loop
     - image : "https://i3.ytimg.com/vi/bJAg_23ixmY/hqdefault.jpg"
       link : "https://www.youtube.com/watch?v=bJAg_23ixmY"
-      
+      title: "Who ate my RAM?"
+
     # books loop
     - image : "https://i3.ytimg.com/vi/-ccFyYRYvBg/hqdefault.jpg"
       link : "https://www.youtube.com/watch?v=-ccFyYRYvBg"
-      
+      title: "Wszystkich nas czeka zagłada..."
+
     # books loop
     - image : "https://i3.ytimg.com/vi/Ag9mBOjSeb8/hqdefault.jpg"
       link : "https://www.youtube.com/watch?v=Ag9mBOjSeb8"
+      title: "Czy wydajność to jakość?"
 
 ################################ Blog ###################################
 blog:
