--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 baseURL = "https://javaconcurrency.symentis.pl/"
-languageCode = "en-us"
+languageCode = "pl"
 title = "Współbieżność w Javie"
 theme = "influencer"
 summaryLength = "10"
